k8s-config/account-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: account-service
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: account-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: account-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: root
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://db:3306/micro
            - name: SPRING_DATASOURCE_USERNAME
              value: root
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: nathanielravindra/account-service:latest
          name: account-service
          ports:
            - containerPort: 8083
              protocol: TCP
      restartPolicy: Always
