k8s-config/db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: "db"
  replicas: 3
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_DATABASE
              value: micro
          image: mariadb:latest
          name: db
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql  # This is the MariaDB data directory
              name: db-storage  # Persistent volume claim name
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-cm0
              subPath: init.sql
            - name: galera-config
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
            - name: galera-init
              mountPath: /docker-entrypoint-initdb.d/galera-init.sh
              subPath: galera-init.sh
              readOnly: true
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pvc
        - name: db-cm0
          configMap:
            name: db-cm0
        - name: galera-config
          configMap:
            name: db-galera-config
        - name: galera-init
          configMap:
            name: db-galera-init
  volumeClaimTemplates:
    - metadata:
        name: db-storage
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 5Gi
