k8s-config/facility-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: facility-service
  name: facility-service
spec:
  containers:
    - env:
        - name: SPRING_DATASOURCE_PASSWORD
          value: root
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://db:3306/micro
        - name: SPRING_DATASOURCE_USERNAME
          value: root
        - name: SPRING_JPA_HIBERNATE_DDL_AUTO
          value: update
      image: nathanielravindra/facility-service:latest
      name: facility-service
      ports:
        - containerPort: 8082
          protocol: TCP
  restartPolicy: OnFailure
