k8s-config/inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: inventory-service
  name: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: inventory-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: inventory-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: root
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://db:3306/micro
            - name: SPRING_DATASOURCE_USERNAME
              value: root
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: nathanielravindra/inventory-service:latest
          imagePullPolicy: Always
          name: inventory-service
          ports:
            - containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: "250m"  
              memory: "256Mi"  
            limits:
              cpu: "750m"  
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
