k8s-config/inventory-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: inventory-service
  name: inventory-service
spec:
  containers:
    - env:
        - name: SPRING_DATASOURCE_PASSWORD
          value: root
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://db:3306/micro
        - name: SPRING_DATASOURCE_USERNAME
          value: root
        - name: SPRING_JPA_HIBERNATE_DDL_AUTO
          value: update
      image: nathanielravindra/inventory-service:latest
      name: inventory-service
      ports:
        - containerPort: 8081
          protocol: TCP
  restartPolicy: OnFailure
