k8s-config/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1  # Adjust this number based on the redundancy requirements
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: "rabbitmq:3-management"  # Use the RabbitMQ image with management plugin
        ports:
        - containerPort: 5672  # The AMQP protocol port
        - containerPort: 15672 # The RabbitMQ management plugin UI port
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          emptyDir: {}
