k8s-config/account-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mylocal
    http:
      paths:
      - path: /account-service
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 8083
